new compilation works now for old examples